prod_snapshot_2015-09-24_1030/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Dev_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GO Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_Change_User_Reason__c</fullName>
        <description>How the user is to be changed</description>
        <inlineHelpText>What access needs to be added/reset/removed</inlineHelpText>
        <label>Change User Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Deactivate User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tinderbox Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InsideSales.com Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_DashBoard_Name__c</fullName>
        <label>Dashboard Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_DashBoard_URL__c</fullName>
        <description>URL of the SalesForce DashBoard in question</description>
        <inlineHelpText>URL of the SalesForce DashBoard in question</inlineHelpText>
        <label>Dashboard URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dev_Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Development_Status__c</fullName>
        <label>Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_New_User_Email__c</fullName>
        <description>Email of New User</description>
        <inlineHelpText>Email Address Must be an active Email address</inlineHelpText>
        <label>New User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dev_New_User_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager for the New User</description>
        <inlineHelpText>Who is the Manager For the New User?</inlineHelpText>
        <label>Role Report To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_New_User_Name__c</fullName>
        <description>Name of New User</description>
        <inlineHelpText>Name of New User Exactly as it will be entered into SalesForce and all other Accounts created</inlineHelpText>
        <label>New User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Problem_Description__c</fullName>
        <description>Additional information about the Support ticket</description>
        <label>Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Report_URL__c</fullName>
        <description>SalesForce URL of the report referenced in the Support ticket</description>
        <inlineHelpText>URL of the SalesForce Report in question</inlineHelpText>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dev_Request_Category__c</fullName>
        <label>Request Category</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_SalesForce_URL__c</fullName>
        <description>SalesForce URL to Record in Question</description>
        <inlineHelpText>SalesForce URL to Record in Question</inlineHelpText>
        <label>SalesForce URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dev_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Lookup of the User Submitting the Support Ticket</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_Time_Spent__c</fullName>
        <description>Estimated amount of time spent working on Support Ticket</description>
        <label>Time Spent (min)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_User_to_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that needs to be altered</description>
        <inlineHelpText>Which User needs to be Changed</inlineHelpText>
        <label>User to Change</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_User_to_Mirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User to Mirror</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_Waiting_On__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When Status is Waiting On Business, indicates who the Ticket is waiting on</description>
        <label>Waiting On</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dig_Acct_Man__c</fullName>
        <formula>Opportunity__r.Dig_Account_Manager__r.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Dig_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dig Acct Man (From Opp)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dig_Acct_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dig Acct Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DigAcctManagerCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>DigitalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EC_Email_Budget__c</fullName>
        <label>EC Email Budget</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EC_Email_Quantity__c</fullName>
        <label>EC Email Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EC_General_Notes__c</fullName>
        <label>EC General Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC_Target_Demographic__c</fullName>
        <label>EC Target Demographic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Target_Geographics__c</fullName>
        <label>EC Target Geographics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_CTR_Expectations__c</fullName>
        <description>Email - CTR Expectations</description>
        <label>Email - CTR Expectations</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Open_Rate_Expectations__c</fullName>
        <description>Email - Open Rate Expectations</description>
        <label>Email - Open Rate Expectations</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Clicks_Compete__c</fullName>
        <label>Exp Clicks (Compete)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exp_Clicks_Dominate__c</fullName>
        <label>Exp Clicks (Dominate)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Prod_Mix__c</fullName>
        <label>Expected Prod Mix</label>
        <picklist>
            <picklistValues>
                <fullName>01:Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:Facebook Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:Retargeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:Social Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Type__c</fullName>
        <formula>IF(OR( CONTAINS( GLW_Full_Page_Type__c , &quot;Custom&quot;),CONTAINS( GLW_Web_Page_Type__c , &quot;Custom&quot;)), &quot;Custom&quot;,&quot;Template&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLC_Email__c</fullName>
        <formula>IF( INCLUDES( Product__c , &quot;Email&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOC - Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLC_Maps_RepDash__c</fullName>
        <formula>IF( INCLUDES( Product__c , &quot;Maps/Reputation Dashboard&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOC - Maps/RepDash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLC_Opp_Monthly__c</fullName>
        <formula>Opportunity__r.Monthly_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOC Opp Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLC_Opp_Total__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOC Opp Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLC_PPC__c</fullName>
        <formula>IF(INCLUDES( Product__c ,&quot;PPC&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOC - PPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLC_Request_Reason__c</fullName>
        <label>GOC Request Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLC_Service_Level__c</fullName>
        <description>IF(NOT(ISNULL(Opportunity__r.Tier_Level__c)),IF(ISPICKVAL(Opportunity__r.Tier_Level__c,&quot;Tier 1&quot;),&quot;Tier I&quot;,&quot;Tier II&quot;,IF(Opportunity__r.Monthly_Total__c &gt;= 7500,&quot;Tier I&quot;,&quot;Tier II&quot;),&quot;&quot;))</description>
        <formula>IF(ISPICKVAL(Account.Tier__c,&quot;Tier 1&quot;),&quot;Tier 1&quot;,&quot;Tier 2&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GOC Service Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLC_Submission_Type__c</fullName>
        <label>GOC Submission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate Attention Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking Purposes Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLC_Validity__c</fullName>
        <label>GOC Validity</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent-IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLC_Workflow_Status__c</fullName>
        <inlineHelpText>Required For &apos;In Process&apos; case status setting.</inlineHelpText>
        <label>GOC Workflow Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting on Market – general info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Market – confirm resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on GL – fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on GL – account management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on GL – make-good approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to F/U with Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to F/U with GL – fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to F/U with GL – account management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Credit/Refund Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLO_Advertiser_Email__c</fullName>
        <label>Advertiser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GLO_Business_Obj_Other__c</fullName>
        <label>GOO Business Obj Other</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLO_Business_Objectives__c</fullName>
        <label>GOO Business Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Following</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GLO_City__c</fullName>
        <label>GOO City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLO_Contract_Length__c</fullName>
        <label>GOO Contract Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLO_Email_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>GOO Email Budget</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_Email_Option__c</fullName>
        <label>GOO Email Option</label>
        <picklist>
            <picklistValues>
                <fullName>Semi-Custom Opt-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Opt-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLO_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLO_Expectations__c</fullName>
        <label>GOO Expectations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLO_Facebook_Ads_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>GOO Facebook Ads $</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_Facebook_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO Facebook Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLO_Maps_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>GOO Maps Budget</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_Maps_Options__c</fullName>
        <label>GOO Maps Options</label>
        <picklist>
            <picklistValues>
                <fullName>Website Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLO_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLO_Monthly_Budget__c</fullName>
        <label>GOO Monthly Budget</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_PPC_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>GOO PPC Budget</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_PPC_Spend_Budget__c</fullName>
        <label>GOO PPC Media Spend</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_PPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO PPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLO_RepDash_Email__c</fullName>
        <label>GOO RepDash Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GLO_RepDash_FName__c</fullName>
        <label>GOO RepDash FName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLO_RepDash_LName__c</fullName>
        <label>GOO RepDash LName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLO_SEO_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>GOO SEO Budget</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_SEO_Keywords__c</fullName>
        <label>GOO SEO Keywords</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLO_SEO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO SEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLO_SocialAds_Spend_Budget__c</fullName>
        <label>GOO Social Ads Media Spend</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_SocialMediaMgmt_Spend_Budget__c</fullName>
        <label>GOO Reach Media Spend</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_Social_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>GOO Social Budget</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_Social_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO Social Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLO_Social_Options__c</fullName>
        <label>GOO Social Options</label>
        <picklist>
            <picklistValues>
                <fullName>Social Mgmt - Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Mgmt - Engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Mgmt - Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Mgmt - Reach Ad Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Weekend Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Social Package</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLO_Special_Terms__c</fullName>
        <label>GOO Special Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLO_Street_Address__c</fullName>
        <label>GOO Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GLO_Website_Address__c</fullName>
        <label>GOO Website Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GLO_Website_Budget__c</fullName>
        <defaultValue>000.00</defaultValue>
        <label>GOO Website $</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLO_Website_Options__c</fullName>
        <label>GOO Website Options</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presence Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposure Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Mobile-Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Capture Pages – Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Capture Pages – Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Capture Pages – Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Site Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLO_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOO Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLR_Details__c</fullName>
        <label>GOR Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLW_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOW Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLW_Audit_Solution__c</fullName>
        <label>GOW Audit Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template w/Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_Company_Comp_Adv__c</fullName>
        <label>GOW Company Comp Adv</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLW_ECommerce_Site__c</fullName>
        <inlineHelpText>Is This An ECommerce Website?</inlineHelpText>
        <label>GOW ECommerce Site</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_Example_Websites__c</fullName>
        <inlineHelpText>If there are any websites that you like that we should consider as we assist in the planning of your new website, please list them here and briefly tell us why you like them.</inlineHelpText>
        <label>GOW Example Websites</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLW_Exist_Artwork_Format__c</fullName>
        <inlineHelpText>Are the existing artwork or corporate color schemes in digital format or will they need to be scanned?</inlineHelpText>
        <label>GOW Exist Artwork Format</label>
        <picklist>
            <picklistValues>
                <fullName>Digital Format</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scan Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_Existing_Artwork__c</fullName>
        <inlineHelpText>Do they have any existing artwork or corporate color schemes that they want incorporated into their site?</inlineHelpText>
        <label>GOW Existing Artwork</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_Full_Page_Type__c</fullName>
        <label>GOW Full Page Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLW_Is_There_A_Logo__c</fullName>
        <label>GOW Is There A Logo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_Is_There_A_Reg_Domain__c</fullName>
        <inlineHelpText>Is there a registered domain already in place?</inlineHelpText>
        <label>GOW Is There A Reg Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_Landing_Page_Type__c</fullName>
        <label>GOW Landing Page Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLW_Proposal_Notes__c</fullName>
        <inlineHelpText>Short optional message to the recieptiants of the proposals</inlineHelpText>
        <label>GOW Proposal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GLW_Redesign_Changes__c</fullName>
        <inlineHelpText>Exactly what is NOT liked about the current site and what would they like to change?</inlineHelpText>
        <label>GOW Redesign Changes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLW_Redesign_URL__c</fullName>
        <inlineHelpText>Enter The URL of the present site if it is a redesign.</inlineHelpText>
        <label>GOW Redesign URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GLW_SML_Full_Site_Design__c</fullName>
        <inlineHelpText>Choose Template Type Or Custom For A Full Site</inlineHelpText>
        <label>GOW SML Full Site Design</label>
        <picklist>
            <controllingField>GLW_SML_Web_Page_Type__c</controllingField>
            <picklistValues>
                <fullName>4 Page Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Page Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Mobile-Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Custom Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_SML_Landing_Page_Type__c</fullName>
        <inlineHelpText>Choose Template Or Custom Page For Landing Page</inlineHelpText>
        <label>GOW SML Landing Page Type</label>
        <picklist>
            <controllingField>GLW_SML_Web_Page_Type__c</controllingField>
            <picklistValues>
                <fullName>Lead Capture Pages – Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Capture Pages – Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Capture Pages – Signature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLW_SML_Web_Page_Type__c</fullName>
        <inlineHelpText>Do You Need A Single Landing Page Or A Full Website?</inlineHelpText>
        <label>GOW SML Web Page Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Capture Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>